# Hyperbot

./: .gitignore  CLAUDE.md
docs/: README.md  architecture.md  networking.md  pathfinding.md  reinforcement-learning.md  state-machines.md  threejs-visualization-plan.md  ui-and-ipc.md  world-model.md
silkroad_lib/src/silkroad_lib/navmesh/triangulation/: navmeshTriangulation.cpp  singleRegionNavmeshTriangulation.cpp  singleRegionNavmeshTriangulation.hpp
silkroad_lib/src/silkroad_lib/pk2/: navmeshParser.cpp  navmeshParser.hpp  pk2ReaderModern.cpp  pk2ReaderModern.hpp
tools/navmesh_viz/: CMakeLists.txt  README.md  geometry.cpp  geometry.hpp  main.cpp  path.cpp  path.hpp  server.cpp  server.hpp  zones.cpp  zones.hpp
tools/navmesh_viz/patches/: pathfinder-polyanya-degeneracy-guard.patch  pathfinder-polyanya-fixes.patch
tools/navmesh_viz/web/: index.html  package-lock.json  package.json  vite.config.js
tools/navmesh_viz/web/src/: main.js
